// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Badge should match snapshot with bold text 1`] = `
<span
  className="badge badge--bold"
>
  bold
</span>
`;

exports[`Badge should match snapshot with simple text 1`] = `
<span
  className="badge"
>
  simple
</span>
`;
